@@ -1,5 +1,7 @@
 #VERSION 0.8.6#
 
+ - moved code from Peak_Core_Extension_Modules to Peak_Application_Modules and deleted modules core extensions
+
  - added method getEngineName() to Peak_View
 
  - moved class Peak_Bootstrap to /Application/ folder and renamed it Peak_Application_Bootstrap
